fix platformSelector popover alignment

--- a/src/components/platformSelector/style.module.scss
+++ b/src/components/platformSelector/style.module.scss
@@ -45,15 +45,6 @@
   width: var(--radix-select-trigger-width);
   box-shadow: 0px 8px 24px 0px rgba(31, 22, 51, 0.15);
   color-scheme: light;
-  /* not ideal */
-  margin-left: 6px;
-}
-
-/* fix for a weird miscalculation in the underlying transform calculation */
-@media (min-width: 644px) {
-  .popover {
-    margin-left: 16px;
-  }
 }
 
 .popover input {
